ce#267 - use date time picker to select data instead of date picker

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
     <!-- leafelet -->
 
+    <!-- ng-pick-datetime -->
+    <link rel="stylesheet" href="assets/css/picker.min.css"/>
+    <!-- ng-pick-datetime -->
+
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicon/apple-touch-icon-57x57.png?v=2"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png?v=2"/>
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicon/apple-touch-icon-72x72.png?v=2"/>
