Refactor NotificationsModule to Angular 9 module

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -106,7 +106,7 @@
 </app-root>
 
 <div layout="column" style="height:100%;" role="main" tabindex="-1" flex>
-    <div class="sp-fade" ui-view="container" flex layout="column" style="min-height: 100vh">
+    <div class="sp-fade" ui-view="container" flex layout="column" style="min-height: 100vh; max-height: 100vh;">
         <div class="app-loading">
             <div class="animated-logo">
                 <img src="/assets/img/favicon/favicon-128.png" class="logo-splash"/>
