--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -101,19 +101,17 @@
 
 </head>
 
-<body layout="row" ng-controller="AppCtrl as appCtrl">
-<app-root>
-</app-root>
-
-<div layout="column" style="height:100%;" role="main" tabindex="-1" flex>
-    <div class="sp-fade" ui-view="container" flex layout="column" style="min-height: 100vh; max-height: 100vh;">
-        <div class="app-loading">
-            <div class="animated-logo">
-                <img src="/assets/img/favicon/favicon-128.png" class="logo-splash"/>
+<body>
+    <app-root>
+        <div style="height:100%;" role="main" tabindex="-1" flex>
+            <div class="sp-fade" style="min-height: 100vh; max-height: 100vh;">
+                <div class="app-loading">
+                    <div class="animated-logo">
+                        <img src="/assets/img/favicon/favicon-128.png" class="logo-splash"/>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-
+    </app-root>
 </body>
 </html>
