--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -27,27 +27,22 @@
 
     <title>Apache StreamPipes - Self-Service IIoT Toolbox</title>
 
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicon/apple-touch-icon-57x57.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicon/apple-touch-icon-72x72.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicon/apple-touch-icon-144x144.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicon/apple-touch-icon-60x60.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicon/apple-touch-icon-120x120.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicon/apple-touch-icon-76x76.png?v=2"/>
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicon/apple-touch-icon-152x152.png?v=2"/>
-    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-196x196.png?v=2" sizes="196x196"/>
-    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-96x96.png?v=2" sizes="96x96"/>
-    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-32x32.png?v=2" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-16x16.png?v=2" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="assets/img/favicon/favicon-128.png?v=2" sizes="128x128"/>
-
-    <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF"/>
-    <meta name="msapplication-TileImage" content="assets/img/favicon/mstile-144x144.png?v=2"/>
-    <meta name="msapplication-square70x70logo" content="assets/img/favicon/mstile-70x70.png?v=2"/>
-    <meta name="msapplication-square150x150logo" content="assets/img/favicon/mstile-150x150.png?v=2"/>
-    <meta name="msapplication-wide310x150logo" content="assets/img/favicon/mstile-310x150.png?v=2"/>
-    <meta name="msapplication-square310x310logo" content="assets/img/favicon/mstile-310x310.png?v=2"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <style type="text/css">
 
@@ -107,7 +102,7 @@
             <div class="sp-fade" style="min-height: 100vh; max-height: 100vh;">
                 <div class="app-loading">
                     <div class="animated-logo">
-                        <img src="/assets/img/favicon/favicon-128.png" class="logo-splash"/>
+                        <img src="/assets/img/favicon/favicon-96x96.png" class="logo-splash"/>
                     </div>
                 </div>
             </div>
